aws/eksv2/vpc.tf
resource "aws_vpc" "main" {
  cidr_block = var.vpc_cidr
  instance_tenancy = "default"

  tags = {
    Name = "demo-spinnaker-vpc"
  }
}
